<resources>
    <string name="app_name">Juntada</string>

    <string name="groups">Grupos</string>
    <string name="error_user_creation">Error al crear usuario</string>
    <string name="try_juntada">Probá Juntada para Android, disponible en:</string>
    <string name="choose_app">Elegir aplicacion</string>
    <string name="error_connecting">Hubo un error al conectarse al servidor</string>
    <string name="invitations">Invitaciones</string>
    <string name="day_month">dd/MM</string>
    <string name="day_month_year">dd/MM/yyyy</string>
    <string name="locale">es</string>
    <string name="country">ES</string>
    <string name="save_to_calendar">Guardar evento en calendario?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="complete_date">dd/MM/yyyy HH:mm</string>
    <string name="group_invitation">Te invite a mi grupo de Juntada! Para ingresar usa el siguiente link:</string>
    <string name="event_invitation">Te invite a mi evento de Juntada! Para ingresar usa el siguiente link:</string>
    <string name="messages">Mensajes</string>
    <string name="expenses">Gastos</string>
    <string name="edit_name">Editar nombre</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="reunions">Juntadas</string>
    <string name="polls">Encuestas</string>
    <string name="choose_an_option">SELECCIONA UNA OPCION</string>
    <string name="confirm_event">CONFIRMAR EVENTO</string>
    <string name="vote">VOTAR</string>
    <string name="votes_saved">Seleccion guardada!</string>
    <string name="no_date">NO PUEDO NINGÚN DÍA</string>
    <string name="confirm_event_no_caps">Confirmar evento</string>
    <string name="confirm_for_day">Seguro que desea confirmar el evento para el día </string>
    <string name="and_time">a la hora</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="add_options">Agregar opciones</string>
    <string name="at_least_two_options">Necesitas ingresar al menos DOS opciones para poder crear una encuesta</string>
    <string name="edit_reunion">Editar Juntada</string>
    <string name="poll">Encuesta</string>
    <string name="description_too_long">La descripcion es muy larga. (Max 150 caracteres)</string>
    <string name="please_fill_all_fields">Por favor completa todos los campos.</string>
    <string name="participants">Participantes</string>
    <string name="members">Integrantes</string>
    <string name="time">Hora</string>
    <string name="type">Tipo</string>
    <string name="name">Nombre</string>
    <string name="location">Ubicacion</string>
    <string name="description">Descripcion</string>
    <string name="reunion">Juntada</string>
    <string name="my_group">Mi grupo</string>
    <string name="insert_a_name_for_the_group">Ingresa un nombre para el grupo</string>
    <string name="now_invite_people">Ahora agrega integrantes al grupo</string>
    <string name="no_notifications">No hay notificaciones</string>
    <string name="add_new_option">Agregar una nueva opcion</string>
    <string name="choose_options">SELECCIONA UNA O MÁS OPCIONES</string>
    <string name="no_invitations">Aún no te han invitado a ningun evento</string>
    <string name="no_reunions">Aún no hay juntadas</string>
    <string name="no_polls">Aún no hay encuestas</string>
    <string name="insert_message">Ingresar mensaje</string>
    <string name="slide_to_see_messages">Desliza para ver los mensajes</string>
    <string name="my_groups">Mis grupos</string>
    <string name="my_invitations">Mis invitaciones</string>
    <string name="profile">Perfil</string>
    <string name="configuration">Configuracion</string>
    <string name="share">Compartir</string>
    <string name="exit">Salir de Juntada</string>
    <string name="save_to_calendar_no_question">Guardar en calendario</string>
    <string name="edit">Editar</string>
    <string name="delete_event">Eliminar evento</string>
    <string name="leave_group">Abandonar grupo</string>
    <string name="delete_group">Eliminar grupo</string>
    <string name="remove_options">Borrar opciones</string>
    <style name="server_client_id">896422881603-trdvh64brq938ava9u8pou4rerc0cv2l.apps.googleusercontent.com</style>


    <string name="date">Fecha</string>
    <string name="new_group">Nuevo grupo</string>
    <string name="notifications">Notificaciones</string>
    <string name="view_profile">Ver perfil</string>
    <string name="voted">Votaron</string>
    <string name="going">VOY</string>
    <string name="not_going">NO VOY</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">397218834007949</string>
    <string name="facebook_application_id" translatable="false">397218834007949</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="login">O</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="title_activity_profile">Ver Perfil</string>
    <string name="title_activity_group_tabbed">GroupTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_settings">Configuracion</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string name="environment">Entorno</string>
    <string-array name="pref_example_list_titles">
        <item>Local</item>
        <item>Demo</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>http://10.1.1.4:8080</item>
        <item>http://www.juntada.nedelu.com</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- NOTIFICATIONS -->

    <string name="new_event">Nueva Juntada</string>
    <string name="group_deleted">Grupo eliminado</string>
    <string name="deleted_group">\u0020ha eliminado el grupo\u0020</string>
    <string name="new_member">Nuevo miembro</string>
    <string name="joined_group">\u0020entró al grupo\u0020</string>
    <string name="group_name_updated">\u0020cambió el nombre del grupo\u0020</string>
    <string name="to">to</string>
    <string name="group_image_updated">\u0020cambió la imagen del grupo\u0020</string>
    <string name="a_new_member">Nuevo miembro</string>
    <string name="left_group">\u0020salió del grupo\u0020</string>
    <string name="group_name_updated_title">Nombre de grupo actualizado</string>
    <string name="group_image_updated_title">Imagen de grupo actualizada</string>
    <string name="group_deleted_title">Grupo eliminado</string>
    <string name="group_member_left">Un miembro a salido del grupo</string>
    <string name="event_deleted">Evento eliminado</string>
    <string name="user_deleted_event">\u0020ha eliminado el evento\u0020</string>
    <string name="in_the_group">\u0020en el grupo\u0020</string>
    <string name="event_updated">Evento modificado</string>
    <string name="user_updated_event">\u0020ha modificado el evento\u0020</string>
    <string name="user_going">\u0020marcó que asistirá al evento\u0020</string>
    <string name="user_not_going">\u0020marcó que no asistirá al evento\u0020</string>
    <string name="created_event">\u0020creó un evento en el grupo\u0020</string>
    <string name="created_poll">\u0020creó una encuesta en el grupo\u0020</string>
    <string name="user_voted_poll">\u0020ha votado en la encuesta\u0020</string>
    <string name="confirmedEvent">\u0020ha confirmado el evento\u0020</string>
    <string name="new_poll">Nueva encuesta</string>
    <string name="user_going_event">Usuario asistente</string>
    <string name="user_not_going_event">Usuario no asistente</string>
    <string name="event_confirmed">Evento confirmado</string>
    <string name="new_vote">Nuevo voto</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Activar notificaciones</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="o">OR</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An error has ocurred</string>



</resources>
