<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/my_groups" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_events"
            android:title="@string/my_invitations" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/configuration"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuration" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>

</menu>