<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_height="match_parent"
    tools:context="com.nedelu.juntada.activity.EventActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            app:expandedTitleGravity="center|top"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginTop="42dp"
            app:expandedTitleTextAppearance="@style/ExtendedAppBar"
            android:fitsSystemWindows="true" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/header"
                    android:src="@drawable/header_background"
                    tools:layout_editor_absoluteX="8dp" />
                <LinearLayout
                    android:layout_marginTop="70dp"

                    android:id="@+id/header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">




                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:text=""
                        android:textColor="#FFFFFF"
                        android:textSize="15dp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:id="@+id/location_button"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:paddingBottom="20dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/location_white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/event_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:lines="1"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text=""
                                android:textColor="#FFFFFF"
                                android:textSize="16dp" />

                            <View
                                android:id="@+id/line"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="2dp"
                                android:background="#FFFFFF"
                                tools:layout_editor_absoluteX="0dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header"
                    tools:context="com.nedelu.juntada.activity.VoteActivity"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:background="@color/colorLight"
                    android:layout_height="wrap_content">

                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:id="@+id/info"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:id="@+id/linear"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal" android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginLeft="0dp"
                                android:layout_gravity="center"
                                android:src="@drawable/fatys_green"/>

                            <TextView
                                android:id="@+id/event_participants"
                                android:textSize="22dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="00"
                                android:textColor="@color/textPrimary"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="5dp" />

                            <ImageView
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_marginLeft="35dp"
                                android:layout_gravity="center"
                                android:src="@drawable/clock"/>

                            <TextView
                                android:id="@+id/event_time"
                                android:textSize="22dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/textPrimary"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="5dp" />



                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:id="@+id/event_weekday"
                                android:textSize="22dp"
                                android:textColor="@color/colorPrimary"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="35dp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/event_date"
                                android:textSize="22dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/textPrimary"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="5dp" />
                        </LinearLayout>


                    </RelativeLayout>

                    <View
                        android:id="@+id/separator2"
                        app:layout_constraintTop_toBottomOf="@+id/info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="368dp"
                        android:layout_height="2dp"
                        android:background="#44888888" />

                    <RelativeLayout
                        android:id="@+id/users"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/separator2"
                        app:layout_constraintLeft_toLeftOf="parent">


                        <android.support.constraint.ConstraintLayout
                            android:id="@+id/groupMembers"
                            android:layout_width="match_parent"
                            android:layout_margin="10dp"
                            android:layout_height="25dp">

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:text="@string/participants"
                                android:textSize="16dp"
                                android:textColor="@color/colorGrey"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView3"
                                android:layout_marginStart="5dp" />

                            <ImageButton
                                android:id="@+id/add_members_button"
                                android:background="#FAFAFA"
                                android:src="@drawable/add_friend"
                                android:layout_marginRight="15dp"
                                android:layout_width="25dp"
                                android:scaleType="fitCenter"
                                android:layout_height="25dp"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginEnd="15dp" />

                        </android.support.constraint.ConstraintLayout>



                        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:id="@+id/userList"
                            style="@style/TwoWayView"
                            android:layout_width="368dp"
                            android:layout_height="80dp"
                            android:drawSelectorOnTop="false"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:context=".GroupActivity"
                            android:layout_below="@+id/groupMembers"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />
                    </RelativeLayout>


                    <ProgressBar
                        android:visibility="invisible"
                        android:id="@+id/progress_bar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:indeterminateOnly="true"
                        android:maxHeight="40dp"
                        android:minHeight="40dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:layout_gravity="bottom"
            app:layout_collapseMode="pin"
            android:id="@+id/tabs"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:menu_fab_size="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:menu_icon="@mipmap/dont_know"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/going"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimaryDark"
            android:src="@mipmap/going"
            app:fab_size="normal"
            app:fab_label="@string/going" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/not_going"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/not_going"
            app:fab_size="normal"
            app:fab_label="@string/not_going" />
    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>